primeira comunicacao do front com o backend

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -3,5 +3,6 @@
     [temPortaFrente]="temPortaFrente"
     [temPortaEsquerda]="temPortaEsquerda"
     [temPortaDireita]="temPortaDireita"
+    (escolhaRealizada)="mudaPosicao($event)"
   ></app-room>
 </div>
