--- a/frontend/src/app/room/room.component.html
+++ b/frontend/src/app/room/room.component.html
@@ -6,16 +6,19 @@
       src="../assets/image/porta-diagonal.png"
       class="porta frente"
       alt="Porta frente"
+      (click)="registraEscolha(1)"
     />
   </div>
   <div class="item"></div>
   <div class="item">
-    <img
-      *ngIf="temPortaEsquerda"
-      src="../assets/image/porta-diagonal.png"
-      class="porta esquerda"
-      alt="Porta esquerda"
+    <img 
+    *ngIf="temPortaEsquerda"
+    src="../assets/image/porta-diagonal.png"
+    class="porta esquerda"
+    alt="Porta esquerda"
     />
+    <button (click)="registraEscolha(2)">ASDASD
+  </button>
   </div>
   <div class="item"></div>
   <div class="item">
@@ -24,6 +27,7 @@
       src="../assets/image/porta-diagonal.png"
       class="porta direita"
       alt="Porta direita"
+      (click)="registraEscolha(3)"
     />
   </div>
 </div>
