--- a/frontend/src/app/room/room.component.scss
+++ b/frontend/src/app/room/room.component.scss
@@ -4,12 +4,40 @@
   &.grid-template {
     grid-template-columns: repeat(3, 1fr);
     > .item {
-      border: 1px solid red;
+      &.parede-esquerda {
+        border-right: 1px solid black;
+      }
+      &.parede-direita {
+        border-left: 1px solid black;
+      }
+      > .chao {
+        &-centro {
+          height: 100%;
+          background-color: gray;
+        }
+        &-esquerda {
+          height: 100%;
+          position: relative;
+          background-color: gray;
+          clip-path: polygon(100% 0, 0% 100%, 100% 100%);
+        }
+        &-direita {
+          height: 100%;
+          position: relative;
+          background-color: gray;
+          clip-path: polygon(0 0, 0% 100%, 100% 100%);
+        }
+      }
     }
   }
 }
 
+.chao {
+  position: flex;
+}
+
 .porta {
+  z-index: 1;
   width: 300px;
   position: absolute;
   &.frente {
