--- a/frontend/src/app/room/room.component.html
+++ b/frontend/src/app/room/room.component.html
@@ -1,3 +1,11 @@
+<div class="info">
+  <img
+    src="../assets/image/bussola.png"
+    class="bussola {{ position }}"
+    alt="bussola"
+  />
+</div>
+
 <div class="grid-room grid-template">
   <div class="item parede-esquerda"></div>
   <div class="item parede-frente">
