add angular material

--- a/frontend/src/app/room/room.component.html
+++ b/frontend/src/app/room/room.component.html
@@ -3,6 +3,7 @@
     src="../assets/image/bussola.png"
     class="bussola {{ direcao }}"
     alt="bussola"
+    (click)="abrirMapa()"
   />
 </div>
 
