alteracao para busca do mapa

--- a/frontend/src/app/mapa/mapa-modal.component.html
+++ b/frontend/src/app/mapa/mapa-modal.component.html
@@ -1,6 +1,6 @@
 <div>
-  <h2 mat-dialog-title>Mapinha</h2>
+  <h2 mat-dialog-title>Mapa</h2>
   <img
-    src="file:///home/developer/Git/gmdiias/hackathon-minotauro/pydata/tempfolder/maze.png"
+    src="http://localhost:5000/map/gif?hashCode={{hashCode}}"
   />
 </div>
