correcoes para execucao

--- a/frontend/src/app/mapa/mapa-modal.component.html
+++ b/frontend/src/app/mapa/mapa-modal.component.html
@@ -1,6 +1,6 @@
 <div>
   <h2 mat-dialog-title>Mapa</h2>
   <img
-    src="http://localhost:5000/map/gif?hashCode={{hashCode}}"
+    src="http://localhost:5000/map/gif/{{roomId}}?hashCode={{hashCode}}"
   />
 </div>
